# aboutme

./: .gitignore  ConvolutionalNeuralNetworks-CIFAR10.ipynb  LICENSE  Pipfile  README.md  app.py  config.py  pyproject.toml  requirements.txt  run.sh  setup.cfg
assets/scss/: home.scss
src/: DeepNeuralNetworks.ipynb
static/css/: home.css
templates/: base.html  home.html
templates/content/: about_me_description.html  album_list.html  profile_links.html  projects_list.html
