[tool.poetry]
name = "aboutme"
version = "0.1.0"
description = ""
authors = ["gino <gino.mempin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
flask = "~=2.0.0"
gunicorn = "~=20.1.0"
pyscss = "==1.3.7"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "*"
mypy = "*"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
